# advent-of-code-2024

./: .gitignore  1.cpp  2.cpp  CMakeLists.txt
01/daniel_zig/: main.zig
01/js/: 1.cpp  CMakeLists.txt
02/daniel_zig/: main.zig
02/js/: 2_part1.cpp  2_part2.cpp  CMakeLists.txt
03/daniel_zig/: main.zig
03/js/: 3_part1.cpp  3_part2.cpp  CMakeLists.txt
04/daniel_zig/: lets_call_this_a_failure.zig  main.zig
include/: list.hpp
include/js/: parsing.hpp  primitives.hpp
